# comp445

./: README.md  midterm1notes.docx
LA1/A1_26922287(trisha)/: Library.java  httpc.java
LA1/c/: CMakeLists.txt  README.md  client_sock.c  client_sock.h  echo_client.c  echo_protocol.h  echo_server.c  server_sock.c  server_sock.h  time_client.c  time_protocol.h  time_server.c
LA1/java/: README.md
LA1/java/netsample/: .project  pom.xml
LA1/java/netsample/src/main/java/ca/concordia/echo/: BlockingEchoClient.java  BlockingEchoServer.java  MultiplexEchoServer.java
LA1/java/netsample/src/main/java/ca/concordia/time/: BlockingTimeClient.java  BlockingTimeServer.java
LA1/python/: data.txt  httpc.py  httpl.py  st
LA2/: echoclient.py  echoserver.py  httpc.py  httpfs.py  httpfs2.py  httpl.py  rem.txt  samples.txt  todo.txt
LA2/afolder/: afile.txt  afile2.txt  anewfile.txt  test2.txt  test3.txt
LA3/: Dockerfile  chat.py  test.py
TA1/: TA1_answers.pages  TA1_calcs.xlsx
TA2/: TA2_answers.pages
TA3/: TA3_answers.pages
